--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>80.0</version>
   <name>ProjectWeb Maven Webapp</name>
   <url>http://maven.apache.org</url>
+<properties><maven.compiler.source>13</maven.compiler.source><maven.compiler.target>13</maven.compiler.target></properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
