--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-<groupId>org.opensource</groupId>
- <artifactId>base</artifactId>
- <version>1.0.0.SNAPSHOT</version>
-
-  ..............
-<properties>
-    <my.version>4.0.8.8</my.version>
-</properties>
-
-<build>
-    <finalName>my-base-project</finalName>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-install-plugin</artifactId>
-            <version>2.3.1</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>install-file</goal>
-                    </goals>
-                    <phase>install</phase>
-                    <configuration>
-                        <file>${project.build.finalName}.${project.packaging}</file>
-                        <generatePom>false</generatePom>
-                        <pomFile>pom.xml</pomFile>
-                        <version>${my.version}</version>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-</plugins>
-</build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"   
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   
+http://maven.apache.org/maven-v4_0_0.xsd">  
+  <modelVersion>4.0.0</modelVersion>  
+  <groupId>com.javatpoint</groupId>  
+  <artifactId>CubeGeneratorWeb</artifactId>  
+  <packaging>war</packaging>  
+  <version>1.0-SNAPSHOT</version>  
+  <name>CubeGeneratorWeb Maven Webapp</name>  
+  <url>http://maven.apache.org</url>  
+  <dependencies>  
+    <dependency>  
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>3.8.1</version>  
+      <scope>test</scope>  
+    </dependency>  
+  </dependencies>  
+  <build>  
+    <finalName>CubeGeneratorWeb</finalName>  
+  </build>  
+</project>  
